Segue um novo mundo de alteracoes e pequenas complicacoes Lembrar:    adicionei alguns buildings no testbuilding para testar    alteracoes no buildingdomain para retornar uma list de strings
A parte d einterface(View) esta' tudo novo e e' ai que surgem as complicacoes

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,4 +5,9 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="ConfigScreenActionBar"
+        parent="@android:style/Widget.Holo.Light.ActionBar.Solid.Inverse">
+
+    </style>
+
 </resources>
