--- a/app/src/main/res/layout/choose_bt_screen.xml
+++ b/app/src/main/res/layout/choose_bt_screen.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent" >
 
     <TextView
         android:text="@string/building_name"
@@ -20,19 +20,23 @@
         android:textSize="20dp" />
 
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_weight="0.63">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
 
+        <TextView android:id="@+id/output"
+            android:background="#758AA7"
+            android:layout_height="wrap_content"
+            android:padding="1px"
+            android:textColor="#ffffff"
+            android:text="Choose BT network : " android:layout_width="fill_parent" />
 
-        <GridView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:id="@+id/gridView"
+        <ListView
+            android:id="@android:id/list"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent">
+        </ListView>
 
-
-            />
     </LinearLayout>
 
 
