--- a/app/src/main/res/layout/activity_bt.xml
+++ b/app/src/main/res/layout/activity_bt.xml
@@ -6,24 +6,37 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.caciones.rssibtv1.View.BTActivity">
 
+    <!-- Selected Building -->
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Selected Building"
+        android:padding="8dip"
+        android:id="@+id/textViewBuilding" />
 
+    <!-- Selected Room -->
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textViewBuilding"
+        android:text="Selected Room"
+        android:padding="8dip"
+        android:id="@+id/textViewRoom"/>
 
 
     <ListView
         android:id="@+id/android:list"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        />
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textViewRoom" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Refresh"
         android:id="@+id/btn_refresh"
-        android:layout_gravity="bottom|right"
-        android:onClick="onClickRefresh"
-        android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/android:list"
-        android:layout_alignEnd="@+id/android:list" />
+
+        android:layout_below="@+id/android:list"
+         />
 
 </RelativeLayout>
