--- a/app/src/main/res/layout/activity_bt.xml
+++ b/app/src/main/res/layout/activity_bt.xml
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:text="Refresh"
         android:id="@+id/btn_refresh"
-
+        android:gravity="bottom"
         android:layout_below="@+id/android:list"
          />
 
