--- a/app/src/main/res/layout/list_bt_rssi.xml
+++ b/app/src/main/res/layout/list_bt_rssi.xml
@@ -10,11 +10,11 @@
         android:textSize="20sp"
         android:paddingTop="5dp"/>
 
-    <!--<TextView-->
-        <!--android:id="@+id/list_rssi"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:textSize="20sp"-->
-        <!--android:paddingTop="5dp"/>-->
+    <TextView
+        android:id="@+id/list_rssi"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:paddingTop="5dp"/>
 
 </LinearLayout>
