--- a/app/src/main/res/layout/activity_building.xml
+++ b/app/src/main/res/layout/activity_building.xml
@@ -24,7 +24,7 @@
         android:layout_marginRight="8dip"
         />
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="133dp"
         android:orientation="horizontal"
